maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:5: error: not found: value radom3
    r = radom3();
        ^RandomMouseMaze:7: error: not found: value faceMur
      case 0 => if(!faceMur()){avance()};
                    ^